Aggiornato file Area.html
-Fix visualizzazioni immagini

--- a/Aree.html
+++ b/Aree.html
@@ -50,10 +50,12 @@
 
 	</HEAD>
 	<BODY>
-	
-	<IMG src = "C:\Documents and Settings\admin\Desktop\Cerchio.jpg" oncontextmenu = "Formula(1);" onClick = "Calcola(1);">
-	<IMG src = "C:\Documents and Settings\admin\Desktop\Quadrato.jpg" oncontextmenu = "Formula(2);" onClick = "Calcola(2);">
-	<IMG src = "C:\Documents and Settings\admin\Desktop\Triangolo.jpg" oncontextmenu = "Formula(3);" onClick = "Calcola(3);">
+	Calcola area cerchio:
+	<IMG src = "Cerchio.jpg" oncontextmenu = "Formula(1);" onClick = "Calcola(1);" alt="Cerchio">
+	Calcola area quadrato:
+	<IMG src = "Quadrato.jpg" oncontextmenu = "Formula(2);" onClick = "Calcola(2);" alt="Quadrato">
+	Calcola area Triangolo:
+	<IMG src = "Triangolo.jpg" oncontextmenu = "Formula(3);" onClick = "Calcola(3);" alt="Triangolo">
 	
 	</BODY>
 </HTML>
